src/ffi/demo1/test.h

#include "data.h"

char* project(mystruct*);

mystruct* make(int, char*);